JG-2007-10-16-0: Enhancem.: New test bugs/issuezilla/2396.
                 Review:    RD

RD-2007-10-12-0: Bugfix:    reverted to state before AP-2007-10-09-0
                 Review:    AH

AP-2007-10-12-0: Bugfix:    fixed other bugs related to AP-2007-10-09-0 changes.
                 Review:    JG

JO-2007-10-12-0: Bugfix:    Corrected ARCO_VIEWS for v. 62
                 Review:    AP

MD-2007-10-12-0: Bugfix:    o added test bugs/issuezilla/2372
                            o fixed testsuite bug concerning script caching
                              and start_remote_prog envlist failure
                 Review:    JG

AP-2007-10-11-0: Bugfix:    fixed bugs related to AP-2007-10-09-0 changes.
                 Review:    LP

JG-2007-10-11-0: Bugfix:    fixed qdel test
                 Review:    MD

JG-2007-10-10-0: Bugfix:    o fixed bugs/issuezilla/2328
                            o removed check for unfixed low prio bugs/rfes in
                              bugs/issuezilla/1914, system_tests/clients/qstat
                            o improved some qstat error handling, cleanup
                 Review:    MD

AP-2007-10-09-0: Enhancem.  o SGE objects interfaces enhancement - Part II.
                            o objects: user, userset, queue, parallel environment
                            o start_sge_bin, start_vi_edit using JGDI shell
                            o qconf client test - testing messages returned by 
                            o the clients
                 Review:    JG

MP-2007-10-08-0: Bugfix:    fixed break that was introduced from gridengine 
                            commit MP-2007-09-25-0.
                 Review:    JG

RD-2007-10-08-0: Bugfix:    fixed test 1330

OJ-2007-10-01-0: Bugfix:    Added test case for IZ 2328, in bugs/issueszilla/2328
                 Review:    AH

RD-2007-09-28-1: Bugfix:    fixed qconf calendar test

RD-2007-09-28-0: Enhancem.: added some advance reservation tests
                 Review:    AA
